--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "dependencies": {
     "escape-string-regexp": "^1.0.5",
+    "loaders.css": "^0.1.2",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "sort-by": "^1.2.0",
-    "styled-components": "^3.3.3",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
