--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-lazyload": "^2.3.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "sort-by": "^1.2.0",
