--- a/package.json
+++ b/package.json
@@ -26,5 +26,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "throttle-debounce": "^2.0.1"
+  }
 }
